Added BCLA info.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Dianne Schaefer</h1>
-<p>Dianne Schaefer is the Coordinator of Library Programs at the Appalachian College Association (ACA). The ACA is a consortium of 36 small, private colleges and universities.</p>
+<p>Dianne Schaefer is the Coordinator of Library Programs at the Appalachian College Association (ACA). The ACA is a consortium of 36 small, private colleges and universities. The Bowen Central Library of Appalachia (BCLA) works with the libraries of member institutions to provide resources and services to enhance the teaching and learning of faculty, staff, and students.</p>
 <p>Current projects include:</p>
 
 <ul>
